services/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: seynath.com
      http:
        paths:
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 6003
          - path: /category
            pathType: Prefix
            backend:
              service:
                name: category-service
                port:
                  number: 6002
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 6001
